--- a/daesh_plotting.Rmd
+++ b/daesh_plotting.Rmd
@@ -7,7 +7,7 @@ output: html_notebook
 
 ```{r}
 #pacman::p_install_gh("systats/binoculaR")
-pacman::p_load(tidyverse, haven, ggthemes, sjPlot, binoculaR, ggplot2, grid, gridExtra, gtable, cowplot)
+pacman::p_load(tidyverse, magrittr, haven, ggthemes, sjPlot, binoculaR, ggplot2, grid, gridExtra, gtable, cowplot)
 
 #devtools::install_github("thomasp85/patchwork")
 ```
@@ -56,21 +56,21 @@ arab4 %<>%
     daesh_resp == "Decline to answer (Do not read)" ~ "Decline to answer",
     TRUE ~ as.character(daesh_resp)
   )) %>% 
-  mutate(threat_cntry_num = ifelse(q826 > 5, 5, q826)) %>% 
+  mutate(threat_cntry_num = ifelse(q826 > 5, NA, q826)) %>% 
   mutate(threat_cntry = sjmisc::to_label(q826)) %>% 
   mutate(threat_cntry = case_when(
     threat_cntry == "Don't know (Do not read)" ~ NA_character_,
     threat_cntry == "Decline to answer (Do not read)" ~ NA_character_,
     TRUE ~ as.character(threat_cntry)
   )) %>% 
-  mutate(threat_reg_num = ifelse(q827 > 5, 5, q827)) %>% 
+  mutate(threat_reg_num = ifelse(q827 > 5, NA, q827)) %>% 
   mutate(threat_reg = sjmisc::to_label(q827)) %>% 
   mutate(threat_reg = case_when(
     threat_reg == "Don't know (Do not read)" ~ NA_character_,
     threat_reg == "Decline to answer (Do not read)" ~ NA_character_,
     TRUE ~ as.character(threat_reg)
   )) %>% 
-  mutate(daesh_islam_num = ifelse(q828 > 5, 5, q828)) %>% 
+  mutate(daesh_islam_num = ifelse(q828 > 5, 5, 5 - q828)) %>% 
   mutate(daesh_islam = sjmisc::to_label(q828)) %>% 
   mutate(daesh_islam = case_when(
     daesh_islam == "Don't know (Do not read)" ~ NA_character_,
@@ -116,7 +116,7 @@ arab4 %<>%
     daesh_violence == "Decline to answer (Do not read)" ~ "Decline to answer",
     TRUE ~ as.character(daesh_violence)
   )) %>%   
-  select(cntry, daesh_resp, threat_cntry, threat_cntry_num, threat_reg, threat_reg_num, daesh_islam, daesh_islam_num, daesh_goal, daesh_goal_num, daesh_violence, daesh_violence_num, threat_cntry2, threat_reg2, daesh_islam2, daesh_goal2, daesh_violence2, wt)
+  select(cntry, daesh_resp, q831other, threat_cntry, threat_cntry_num, threat_reg, threat_reg_num, daesh_islam, daesh_islam_num, daesh_goal, daesh_goal_num, daesh_violence, daesh_violence_num, threat_cntry2, threat_reg2, daesh_islam2, daesh_goal2, daesh_violence2, wt)
 
 ```
 
@@ -165,7 +165,7 @@ threat_cntry_pic <- arab4 %>%
   scale_fill_ptol("") +
   xlab("") + ylab("") +
   ggtitle("Does Daesh pose a threat to our country?") + 
-  labs(caption = paste0("N =\t", nrows, ". Data based on Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 30))
+  labs(caption = paste0("N =\t", nrows, ". Source: Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 30))
 
 ggsave(threat_cntry_pic, file = "images/threat_cntry.png", width = 18, height = 10)
 ```
@@ -209,7 +209,7 @@ threat_reg_pic <- arab4 %>%
   scale_fill_ptol("") +
   xlab("") + ylab("") +
   ggtitle("Does Daesh pose a threat to the Arab region?") + 
-  labs(caption = paste0("N =\t", nrows, ". Data based on Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 30))
+  labs(caption = paste0("N =\t", nrows, ". Source: Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 30))
 
 ggsave(threat_reg_pic, file = "images/threat_reg.png", width = 18, height = 10)
 ```
@@ -254,7 +254,7 @@ daesh_islam2_pic <- arab4 %>%
   xlab("") + ylab("") +
   ggtitle("To what extent do you believe Daesh’s tactics are
 compatible with the teachings of Islam?") + 
-  labs(caption = paste0("N =\t", nrows, ". Data based on Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 20))
+  labs(caption = paste0("N =\t", nrows, ". Source: Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 20))
 
 ggsave(daesh_islam2_pic, file = "images/daesh_islam2.png", width = 18, height = 10)
 ```
@@ -299,7 +299,7 @@ daesh_goal_pic <- arab4 %>%
   xlab("") + ylab("") +
   ggtitle("To what extent do you believe Daesh’s tactics are
 compatible with the teachings of Islam?") + 
-  labs(caption = paste0("N =\t", nrows, ". Data based on Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 20))
+  labs(caption = paste0("N =\t", nrows, ". Source: Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 20))
 
 ggsave(daesh_goal_pic, file = "images/daesh_goal.png", width = 18, height = 10)
 ```
@@ -344,16 +344,15 @@ daesh_violence_pic <- arab4 %>%
   xlab("") + ylab("") +
   ggtitle("To what extent do you believe Daesh’s tactics are
 compatible with the teachings of Islam?") + 
-  labs(caption = paste0("N =\t", nrows, ". Data based on Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 20))
+  labs(caption = paste0("N =\t", nrows, ". Source: Arab Barometer 4 (2017)"), size = 5) + theme(legend.text=element_text(size = 20))
 
 ggsave(daesh_violence_pic, file = "images/daesh_violence.png", width = 18, height = 10)
 ```
-
+# Daesh Responsible
 
 ```{r}
 
 daesh <- arab4 %>% 
-  mutate(daesh_resp = factor(sjmisc::to_label(q831))) %>%
   mutate(daesh_resp = forcats::fct_infreq(daesh_resp)) %>% 
   select(cntry, daesh_resp) %>% 
   filter(cntry != "Egypt") %>% 
@@ -372,23 +371,24 @@ ggsave(daesh, file = "daesh.png", height = 10, width = 18)
 ```
 
 ```{r}
+
 plot_daesh <- function(data, cntry_fil = NULL, height = 10, width = 10) {
 
-if(!is.null(cntry_fil)) data %<>% filter(cntry == cntry_fil) 
+if (cntry_fil %in% cntrys) data %<>% filter(cntry == cntry_fil) 
   
 n <- data %>% 
-  select(cntry, daesh_resp) %>% 
+  select(cntry, daesh_resp_) %>% 
   na.omit() %>% 
   nrow()
   
-daesh <- data %>% 
-  select(cntry, daesh_resp) %>% 
+daesh <- arab4 %>% 
+  select(cntry, daesh_resp_) %>% 
   na.omit() %>% 
-  mutate(daesh_resp = forcats::fct_infreq(daesh_resp)) %>% 
-#  mutate(daesh_resp = forcats::fct_explicit_na(daesh_resp)) %>% 
-  ggplot(aes(x = daesh_resp, fill = daesh_resp)) + 
+  mutate(daesh_resp_ = forcats::fct_infreq(daesh_resp_)) %>% 
+#  mutate(daesh_resp_ = forcats::fct_explicit_na(daesh_resp_)) %>% 
+  ggplot(aes(x = daesh_resp_, fill = daesh_resp_)) + 
           geom_bar(aes(y = (prop.table(..count..) * 100))) + 
-#          scale_y_continuous(limits = c(0, max(length(daesh_resp)) + 0.3)) +
+#          scale_y_continuous(limits = c(0, max(length(daesh_resp_)) + 0.3)) +
    geom_text(aes(y = prop.table(..count..) * 100 + 2.5, label = paste0(round(prop.table(..count..),4) * 100, '%')), 
               colour = "black", 
               stat = 'count', 
@@ -396,24 +396,25 @@ daesh <- data %>%
   coord_flip() +
   ggthemes::theme_gdocs(base_size = 25) +
   viridis::scale_fill_viridis(discrete = T) + 
-  theme(legend.position="none") +
+  theme(legend.position = "none",
+        plot.caption = element_text(face = "italic")) +
   ggtitle(paste0(cntry_fil, ": Who or what is responsible for Daesh?")) + 
-  labs(caption = paste0("N =\t", n, ". Data based on Arab Barometer 4 (2017)"), y = "Percent", x = NULL)
+  labs(caption = paste0("N = \t", n, ". Source: Arab Barometer 4 (2017)"), y = "Percent", x = NULL)
 
   
-ggsave(daesh, file = paste0("daesh_", cntry_fil,".png"), height = height, width = width)
+ggsave(daesh, file = paste0("images/daesh_", cntry_fil,".png"), height = height, width = width)
 
 return(daesh)
 }
 
 cntrys <- c("Algeria", "Jordan", "Lebanon", "Morocco", "Palestine", 
-"Tunisia")
+"Tunisia", "Syrian Refugees")
 
 for (jj in cntrys) {
   plot_daesh(arab4, jj, width = 19)
 }
 
-  plot_daesh(arab4, width = 19)
+  plot_daesh(arab4, "Arab Barometer", width = 19)
 ```
 
 
@@ -432,17 +433,59 @@ ggsave(ss$plot, file = "ss.png")
 sjPlot::sjp.frq(dat$daesh_resp, dat$cntry, coord.flip = T)
 ```
 
-```{r}
-sjmisc::frq(sjmisc::to_label(arab4$q709aoppose)) # oppose Israel
-```
+# Other Responses
 
 ```{r}
-Q831Other. Other specified	
+#Q831Other. Other specified	
 
-sjmisc::frq(sjmisc::to_label(arab4$q831other))
+data.frame(sjmisc::frq(sjmisc::to_label(arab4$q831other)))
+
+data.frame(sjmisc::frq(sjmisc::to_label(arab4$q831other))) %>% 
+  dplyr::arrange(desc(valid.prc))
+
+arab4 %<>% 
+  mutate(daesh_resp_ = 
+           case_when(
+             q831other == "Syria" ~ "Syria",     
+             q831other == "Bashar al-Assad" ~ "Syria",  
+             q831other == "Syrian regime" ~ "Syria",    
+             q831other == "Western countries" ~ "Western countries", 
+             daesh_resp == "The United States" ~ "Western countries", 
+             q831other == "Turkey" ~ "Turkey",  
+             q831other == "Arab and foreign countries" ~ "Arab countries",
+             q831other == "Arab countries" ~ "Arab countries", 
+             daesh_resp == "Saudi Arabia" ~ "Arab countries", 
+             q831other == "No one" ~ "No one",  
+             q831other == "Israel & the United States" ~ "Israel & the United States", 
+             q831other == "The United States & Israel" ~ "Israel & the United States",
+             q831other == "Libya" ~ "Libya",
+             q831other == "Extremists" ~ "Extremists",
+             q831other == "Religious extremism" ~ "Extremists",
+             q831other == "Hezbollah" ~ "Hezbollah",
+             q831other == "Lack of religious culture and awareness" ~ "Lack of religious culture and awareness",
+             q831other == "Arab Revolutions" ~ "Arab Revolutions",
+             q831other == "Great powers" ~ "Great powers",
+             daesh_resp == "Don't know" ~ "Don't know", 
+             daesh_resp == "Israel" ~ "Israel", 
+             daesh_resp == "Iran" ~ "Iran", 
+             daesh_resp == "Sectarian differences" ~ "Sectarian differences", 
+             daesh_resp == "Al-Qaeda" ~ "Al-Qaeda", 
+             daesh_resp == "Social injustice" ~ "Social injustice", 
+             daesh_resp == "Decline to answer" ~ "Decline to answer", 
+             daesh_resp == "Other Gulf country" ~ "Arab countries", 
+             daesh_resp == "Political exclusion" ~ "Political exclusion", 
+             daesh_resp == "Russia" ~ "Russia", 
+             daesh_resp == "Other" ~ "Other", 
+             TRUE ~ "Other"
+           )) 
+
+
+data.frame(sjmisc::frq(sjmisc::to_label(arab4$daesh_resp))) %>% 
+  dplyr::arrange(desc(valid.prc))
+  
 ```
 
-# sjp.likert
+# Goals and Violence
 
 ```{r}
 
@@ -543,7 +586,7 @@ grid_arrange_shared_legend <- function(...,
         ncol = 1,
         top = textGrob(title, gp = gpar(fontsize = 20)), 
         bottom = textGrob(
-          paste0("N = \t", n, ". Data based on Arab Barometer 4 (2017)"), x = 0.99, 
+          paste0("N = \t", n, ". Source: Arab Barometer 4 (2017)"), x = 0.99, 
                       hjust = 1, gp = gpar(fontface = 3L, fontsize = 12)),
         heights = unit.c(unit(0.9, "npc") - lheight, lheight)
       ),
@@ -580,7 +623,283 @@ ggsave(combined, file = "images/combined.png", height = 12, width = 8)
 
 ```
 
+# Daesh Islam
+
+```{r}
+labels <- c("Very incompatible \t",
+            "Incompatible \t",
+            "Compatible \t",
+            "Very Compatible \t",
+            "Decline/Don't Know \t")
+
+plot_islam <- function(data, 
+                       country, 
+                       labels = NULL,
+                       width = 6, height = 2, 
+                       geom.size = 0.01, 
+                       title = F, save = T, legend = T) {
+  
+  sjPlot::set_theme(geom.label.color = "black", 
+             geom.label.size = 4.5, # Percentage
+             axis.textsize = 0.95,  # Axis labels
+             axis.title.size = 1,  
+             legend.size = 1,     # legend label size
+             legend.item.size = .7)
+  
+  arab_wide <- data %>% 
+  filter(cntry == country) %>% 
+  select(daesh_islam_num, wt)  
+
+gg <- sjp.likert(arab_wide[,1], 
+#                 wrap.title = 20,
+           weight.by = arab_wide$wt,
+           cat.neutral = 5,
+#           sort.frq = "pos.asc",
+           values = "sum.outside",
+           geom.colors = "RdBu",
+           legend.labels = labels,
+           show.prc.sign = TRUE,
+           show.n = FALSE,    # hide N's in axis labels
+           grid.range = 1.1,
+           geom.size = geom.size,
+           reverse.colors = F, 
+#           expand.grid = 5,
+           axis.labels = "")$plot +
+  labs(title = country) +
+  theme_hc()
+
+
+if (title == T) {
+  gg <- gg + labs(title = "To what extent do you agree with the goals
+of Daesh/ Daesh's use of violence?")
+  }
+
+if (legend == F) {
+  gg <- gg + theme(legend.position = "none")
+  }
+
+if (save == T) {
+  ggsave(gg, file = paste0("images/goal_viol_", country, ".png"), 
+         width = width, height = height)
+  }
+
+return(gg)
+}
+
+#cntrys <- c("Algeria", "Jordan", "Lebanon", "Morocco", "Palestine", "Tunisia")
+
+#for (jj in cntrys) {
+#  plot_goal_viol(arab4, jj, save = T, width = 10, height = 5)
+#}
+
+plot_islam_alg <- plot_islam(arab4, "Algeria", save = T, legend = T)
+plot_islam_jor <- plot_islam(arab4, "Jordan", save = F, legend = F)
+plot_islam_leb <- plot_islam(arab4, "Lebanon", save = F, legend = F)
+plot_islam_mor <- plot_islam(arab4, "Morocco", save = F, legend = F)
+plot_islam_pal <- plot_islam(arab4, "Palestine", save = F, legend = F, labels = labels)
+plot_islam_tun <- plot_islam(arab4, "Tunisia", save = F, legend = F)
+plot_islam_ref <- plot_islam(arab4, "Syrian Refugees", save = F, legend = F)
+
+grid_arrange_shared_legend <- function(...,
+           ncol = length(list(...)),
+           nrow = 1,
+           position = c("bottom", "top", "right"),
+           title,
+           caption,
+           n = nrow(arab4)) {
+    
+    plots <- list(...)
+    position <- match.arg(position)
+    g <-
+      ggplotGrob(plots[[1]] + theme(legend.position = position))$grobs
+    legend <- g[[which(sapply(g, function(x)
+      x$name) == "guide-box")]]
+    lheight <- sum(legend$height)
+    lwidth <- sum(legend$width)
+    gl <- lapply(plots, function(x)
+      x + theme(legend.position = "none"))
+    gl <- c(gl, ncol = ncol, nrow = nrow)
+    
+    combined <- switch(
+      position,
+      "bottom" = arrangeGrob(
+        do.call(arrangeGrob, gl),
+        legend,
+        ncol = 1,
+        top = textGrob(title, gp = gpar(fontsize = 20)), 
+        bottom = textGrob(
+          paste0("N = \t", n, ". Source: Arab Barometer 4 (2017)"), x = 0.99, 
+                      hjust = 1, gp = gpar(fontface = 3L, fontsize = 12)),
+        heights = unit.c(unit(0.9, "npc") - lheight, lheight)
+      ),
+      "right" = arrangeGrob(
+        do.call(arrangeGrob, gl),
+        legend,
+        ncol = 2,
+#        main = textGrob("Title goes here", gp = gpar(fontsize = 24)),
+        widths = unit.c(unit(1, "npc") - lwidth, lwidth)
+      )
+    )
+    
+    grid.newpage()
+    grid.draw(combined)
+    
+    # return gtable invisibly
+    invisible(combined)
+}
+
+combined <- grid_arrange_shared_legend(
+  plot_islam_pal,
+  plot_islam_alg, 
+  plot_islam_leb,
+  plot_islam_tun,
+  plot_islam_ref,
+  plot_islam_mor,
+  plot_islam_jor,
+  ncol = 1, nrow = 7, 
+  position = "bottom",
+  title = "To what extent do you believe Daesh’s tactics are
+compatible with the teachings of Islam?") 
+
+ggsave(combined, file = "images/compatible.png", height = 10, width = 10)
+```
+
+# Threat to Country
+
 ```{r}
 
+nrows <- arab4 %>% 
+  select(cntry, threat_cntry) %>% 
+  na.omit() %>% 
+  nrow()
+  
+prep_dat <- function(data, country) {    
+  
+filtered <- data %>% 
+        filter(cntry == country)  
+
+dat <- data.frame(cntry = country,
+           percent = as.numeric(
+             prop.table(stats::xtabs(
+               filtered$wt ~ filtered$threat_cntry_num))),
+           threat_cntry = factor(c("Very grave threat", 
+                                   "Somewhat of a threat", 
+                                   "No threat at all")))
+
+return(dat)
+}  
+
+cntrys <- c("Algeria", "Jordan", "Lebanon", "Morocco", "Palestine", 
+"Tunisia", "Syrian Refugees")
+
+threat_dat <- list()
+for (jj in cntrys) {
+  threat_dat[[jj]] <- prep_dat(arab4, jj)
+}
+
+threat_dat <- suppressWarnings(bind_rows(threat_dat))
+
+
+    
+threat_cntry_pic <- threat_dat %>% 
+  mutate(cntry = fct_reorder2(cntry, threat_cntry, percent, .desc = F)) %>%
+#  mutate(cntry = forcats::fct_infreq(cntry)) %>% 
+#  arrange(cntry) %>% 
+#  mutate(threat_cntry = fct_reorder(threat_cntry, percent, .desc = T)) %>% 
+  mutate(threat_cntry = fct_rev(threat_cntry)) %>% 
+#  arrange(desc(threat_cntry)) %>% 
+  mutate(highest = ifelse(percent %in% sort(percent, decreasing = TRUE)[1:19],
+                          paste0(round(percent * 100, 2),"%"), "")) %>% 
+  ggplot(aes(y = percent, x = cntry, fill = threat_cntry)) + 
+  geom_bar(position = "fill", stat = "identity") +
+  geom_text(aes(label = highest),
+              position = position_fill(vjust = .5), size = 7, color = "black") +
+    # or:
+    #geom_bar(position = position_fill(), stat = "identity") +
+  scale_y_continuous(labels = scales::percent_format()) +
+  coord_flip() +
+#  guides(fill = guide_legend(reverse=TRUE)) +
+  scale_fill_brewer("", palette = "YlOrRd", direction = -1) +
+  xlab("") + ylab("") +
+  ggtitle("Does Daesh pose a threat to our country?")  + 
+  labs(caption = paste0("N =\t", nrows, ". Source: Arab Barometer 4 (2017)")) + 
+  theme(legend.text = element_text(size = 25, vjust = 0.5),
+        plot.title = element_text(size = 40),
+        axis.text = element_text(size = 25),
+#        legend.spacing.y = unit(5000,"cm"), 
+        plot.caption = element_text(size = 18, face = "italic")) + 
+#  guides(fill = guide_legend(keywidth = 4)) +
+  theme_hc(base_size = 25)
+
+ggsave(threat_cntry_pic, file = "images/threat_cntry.png", width = 18, height = 10)
+```
+
+# Threat to Region
+
+```{r}
+nrows <- arab4 %>% 
+  select(cntry, threat_reg) %>% 
+  na.omit() %>% 
+  nrow()
+  
+prep_dat <- function(data, country) {    
+  
+filtered <- data %>% 
+        filter(cntry == country)  
+
+dat <- data.frame(cntry = country,
+           percent = as.numeric(
+             prop.table(stats::xtabs(
+               filtered$wt ~ filtered$threat_reg_num))),
+           threat_reg = factor(c("Very grave threat", 
+                                   "Somewhat of a threat", 
+                                   "No threat at all")))
+
+return(dat)
+}  
+
+cntrys <- c("Algeria", "Jordan", "Lebanon", "Morocco", "Palestine", 
+"Tunisia", "Syrian Refugees")
+
+threat_dat <- list()
+for (jj in cntrys) {
+  threat_dat[[jj]] <- prep_dat(arab4, jj)
+}
+
+threat_dat <- suppressWarnings(bind_rows(threat_dat))
+
+
+    
+threat_reg_pic <- threat_dat %>% 
+  mutate(cntry = fct_reorder2(cntry, threat_reg, percent, .desc = F)) %>%
+#  mutate(cntry = forcats::fct_infreq(cntry)) %>% 
+#  arrange(cntry) %>% 
+#  mutate(threat_reg = fct_reorder(threat_reg, percent, .desc = T)) %>% 
+  mutate(threat_reg = fct_rev(threat_reg)) %>% 
+#  arrange(desc(threat_reg)) %>% 
+  mutate(highest = ifelse(percent %in% sort(percent, decreasing = TRUE)[1:15],
+                          paste0(round(percent * 100, 2),"%"), "")) %>% 
+  ggplot(aes(y = percent, x = cntry, fill = threat_reg)) + 
+  geom_bar(position = "fill", stat = "identity") +
+  geom_text(aes(label = highest),
+              position = position_fill(vjust = .5), size = 7, color = "black") +
+    # or:
+    #geom_bar(position = position_fill(), stat = "identity") +
+  scale_y_continuous(labels = scales::percent_format()) +
+  coord_flip() +
+#  guides(fill = guide_legend(reverse=TRUE)) +
+  scale_fill_brewer("", palette = "YlOrRd", direction = -1) +
+  xlab("") + ylab("") +
+  ggtitle("Does Daesh pose a threat to the Arab region?")  + 
+  labs(caption = paste0("N =\t", nrows, ". Source: Arab Barometer 4 (2017)")) + 
+  theme(legend.text = element_text(size = 25, vjust = 0.5),
+        plot.title = element_text(size = 40),
+        axis.text = element_text(size = 25),
+#        legend.spacing.y = unit(5000,"cm"), 
+        plot.caption = element_text(size = 18, face = "italic")) + 
+#  guides(fill = guide_legend(keywidth = 4)) +
+  theme_hc(base_size = 25)
+
+ggsave(threat_reg_pic, file = "images/threat_reg.png", width = 18, height = 10)
 ```
 
